Firmware/esp32-s3-mp3-player/build/log/idf_py_stdout_output_3060
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D E:\CProjects\esp32-s3-mp3-player\build\bootloader\esp-idf\esptool_py && E:\ESP\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe E:/Development/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/CProjects/esp32-s3-mp3-player/build/bootloader/bootloader.bin"
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp32-s3-mp3-player.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/esp32-s3-mp3-player.c.obj 
ccache E:\ESP\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.3-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/CProjects/esp32-s3-mp3-player/build/config -IE:/CProjects/esp32-s3-mp3-player/main -IE:/Development/components/newlib/platform_include -IE:/Development/components/freertos/config/include -IE:/Development/components/freertos/config/include/freertos -IE:/Development/components/freertos/config/xtensa/include -IE:/Development/components/freertos/FreeRTOS-Kernel/include -IE:/Development/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/Development/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IE:/Development/components/freertos/esp_additions/include -IE:/Development/components/esp_hw_support/include -IE:/Development/components/esp_hw_support/include/soc -IE:/Development/components/esp_hw_support/include/soc/esp32s3 -IE:/Development/components/esp_hw_support/dma/include -IE:/Development/components/esp_hw_support/ldo/include -IE:/Development/components/esp_hw_support/debug_probe/include -IE:/Development/components/esp_hw_support/mspi_timing_tuning/include -IE:/Development/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IE:/Development/components/esp_hw_support/power_supply/include -IE:/Development/components/esp_hw_support/port/esp32s3/. -IE:/Development/components/esp_hw_support/port/esp32s3/include -IE:/Development/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IE:/Development/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IE:/Development/components/heap/include -IE:/Development/components/heap/tlsf -IE:/Development/components/log/include -IE:/Development/components/soc/include -IE:/Development/components/soc/esp32s3 -IE:/Development/components/soc/esp32s3/include -IE:/Development/components/soc/esp32s3/register -IE:/Development/components/hal/platform_port/include -IE:/Development/components/hal/esp32s3/include -IE:/Development/components/hal/include -IE:/Development/components/esp_rom/include -IE:/Development/components/esp_rom/esp32s3/include -IE:/Development/components/esp_rom/esp32s3/include/esp32s3 -IE:/Development/components/esp_rom/esp32s3 -IE:/Development/components/esp_common/include -IE:/Development/components/esp_system/include -IE:/Development/components/esp_system/port/soc -IE:/Development/components/esp_system/port/include/private -IE:/Development/components/xtensa/esp32s3/include -IE:/Development/components/xtensa/include -IE:/Development/components/xtensa/deprecated_include -IE:/Development/components/lwip/include -IE:/Development/components/lwip/include/apps -IE:/Development/components/lwip/include/apps/sntp -IE:/Development/components/lwip/lwip/src/include -IE:/Development/components/lwip/port/include -IE:/Development/components/lwip/port/freertos/include -IE:/Development/components/lwip/port/esp32xx/include -IE:/Development/components/lwip/port/esp32xx/include/arch -IE:/Development/components/lwip/port/esp32xx/include/sys -IE:/Development/components/esp_lcd/include -IE:/Development/components/esp_lcd/interface -IE:/Development/components/esp_lcd/rgb/include -IE:/Development/components/driver/deprecated -IE:/Development/components/driver/i2c/include -IE:/Development/components/driver/touch_sensor/include -IE:/Development/components/driver/twai/include -IE:/Development/components/driver/touch_sensor/esp32s3/include -IE:/Development/components/esp_pm/include -IE:/Development/components/esp_ringbuf/include -IE:/Development/components/esp_driver_gpio/include -IE:/Development/components/esp_driver_pcnt/include -IE:/Development/components/esp_driver_gptimer/include -IE:/Development/components/esp_driver_spi/include -IE:/Development/components/esp_driver_mcpwm/include -IE:/Development/components/esp_driver_ana_cmpr/include -IE:/Development/components/esp_driver_i2s/include -IE:/Development/components/esp_driver_sdmmc/include -IE:/Development/components/sdmmc/include -IE:/Development/components/esp_driver_sdspi/include -IE:/Development/components/esp_driver_sdio/include -IE:/Development/components/esp_driver_dac/include -IE:/Development/components/esp_driver_rmt/include -IE:/Development/components/esp_driver_tsens/include -IE:/Development/components/esp_driver_sdm/include -IE:/Development/components/esp_driver_i2c/include -IE:/Development/components/esp_driver_uart/include -IE:/Development/components/vfs/include -IE:/Development/components/esp_driver_ledc/include -IE:/Development/components/esp_driver_parlio/include -IE:/Development/components/esp_driver_usb_serial_jtag/include -IE:/Development/components/esp_driver_twai/include -IE:/CProjects/esp32-s3-mp3-player/managed_components/espressif__led_strip/include -IE:/CProjects/esp32-s3-mp3-player/managed_components/espressif__led_strip/interface -IE:/CProjects/esp32-s3-mp3-player/managed_components/lvgl__lvgl -IE:/CProjects/esp32-s3-mp3-player/managed_components/lvgl__lvgl/src -IE:/CProjects/esp32-s3-mp3-player/managed_components -IE:/CProjects/esp32-s3-mp3-player/managed_components/lvgl__lvgl/examples -IE:/CProjects/esp32-s3-mp3-player/managed_components/lvgl__lvgl/demos -IE:/Development/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -g -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=E:/CProjects/esp32-s3-mp3-player=. -fmacro-prefix-map=E:/Development=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp32-s3-mp3-player.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\esp32-s3-mp3-player.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp32-s3-mp3-player.c.obj -c E:/CProjects/esp32-s3-mp3-player/main/esp32-s3-mp3-player.c
E:/CProjects/esp32-s3-mp3-player/main/esp32-s3-mp3-player.c: In function 'create_mp3_ui':
E:/CProjects/esp32-s3-mp3-player/main/esp32-s3-mp3-player.c:58:41: error: 'lv_font_montserrat_14vvvvvvvvvvvvv' undeclared (first use in this function)
   58 |     lv_obj_set_style_text_font(header, &lv_font_montserrat_14vvvvvvvvvvvvv, 0);
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/CProjects/esp32-s3-mp3-player/main/esp32-s3-mp3-player.c:58:41: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
